<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:windowBackground="@drawable/dialog_bottom_background"
    android:padding="16dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ly_share_weichat_circle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:textColor="@color/share_dialog_item"
                android:gravity="center"
                android:textSize="12sp"
                android:drawableTop="@drawable/share_icon_wechatfriends_selector"
                android:text="@string/platform_weichat_circle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_share_weichat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:textColor="@color/share_dialog_item"
                android:gravity="center"
                android:textSize="12sp"
                android:drawableTop="@drawable/share_icon_wechat_selector"
                android:text="@string/platform_weichat" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_share_sina_weibo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:textColor="@color/share_dialog_item"
                android:gravity="center"
                android:textSize="12sp"
                android:drawableTop="@drawable/share_icon_sinaweibo_selector"
                android:text="@string/platform_sina" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ly_share_qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:textColor="@color/share_dialog_item"
                android:gravity="center"
                android:textSize="12sp"
                android:drawableTop="@drawable/share_icon_qq_selector"
                android:text="@string/platform_qq" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_share_copy_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:textColor="@color/share_dialog_item"
                android:gravity="center"
                android:textSize="12sp"
                android:drawableTop="@drawable/share_icon_copy_link_selector"
                android:text="@string/platform_copy_link" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_share_more_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:textColor="@color/share_dialog_item"
                android:gravity="center"
                android:textSize="12sp"
                android:drawableTop="@drawable/share_icon_more_selector"
                android:text="@string/platform_more_option" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>