<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:http="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffe4e4e4"
    tools:context="com.yaoyumeng.v2ex2.ui.AboutActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="爱V2EX -- 发掘你的潜能"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/t1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="1.0.0"
        android:textColor="#ff666666"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/markV2EX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/common_item_click_selector"
            android:minHeight="48dp"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/settings_feedback"
                android:textColor="#222222"
                android:textSize="18sp" />
        </RelativeLayout>

        <include layout="@layout/divide_1_12" />

        <RelativeLayout
            android:id="@+id/checkUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:background="@drawable/common_item_click_selector"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/settings_check_update"
                android:textColor="#222222"
                android:textSize="18sp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include layout="@layout/divide_1_12" />

        <TextView
            android:id="@+id/codingWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/github_project"
            android:textColor="#ff666666"
            android:textSize="14sp"
            android:autoLink="web" />

        <com.yaoyumeng.v2ex2.ui.widget.RichTextView
            android:id="@+id/v2ex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff666666"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>


